--- a/PizzaOrder(KuotM)/PizzaOrder(KuotM)/PizzaOrder(KuotM).csproj
+++ b/PizzaOrder(KuotM)/PizzaOrder(KuotM)/PizzaOrder(KuotM).csproj
@@ -46,27 +46,31 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Form1.cs">
+    <Compile Include="PizzaOrderForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="PizzaOrderForm.Designer.cs">
+      <DependentUpon>PizzaOrderForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="Program.cs" />
+    <Compile Include="PizzaOrder.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="PizzaOrderForm.resx">
+      <DependentUpon>PizzaOrderForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
-      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
       <SubType>Designer</SubType>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
-    <Compile Include="Properties\Resources.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DependentUpon>Resources.resx</DependentUpon>
-    </Compile>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
     </None>
+    <Compile Include="Properties\Resources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
     <Compile Include="Properties\Settings.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Settings.settings</DependentUpon>
@@ -75,6 +79,37 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Webp.net-resizeimage.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\SOUND OFF.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\SOUND ON.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\KrustyKrab.wav" />
+    <None Include="Resources\FUN.wav" />
+    <None Include="Resources\Green olives.png" />
+    <None Include="Resources\fries.png" />
+    <None Include="Resources\pepperoni-pizza.png" />
+    <None Include="Resources\pepperoni-olives-pizza.png" />
+    <None Include="Resources\pepperoni-bacon-pizza.png" />
+    <None Include="Resources\pepperoni-bacon-olives-pizza.png" />
+    <None Include="Resources\olives-pizza.png" />
+    <None Include="Resources\salad.png" />
+    <None Include="Resources\Onions.png" />
+    <None Include="Resources\Pepperoni.png" />
+    <None Include="Resources\cheese-pizza.png" />
+    <None Include="Resources\Bacon.png" />
+    <None Include="Resources\chickenwing.png" />
+    <None Include="Resources\chicken.png" />
+    <None Include="Resources\bacon-olives-pizza.png" />
+    <None Include="Resources\bacon-pizza.png" />
+    <Content Include="Resources\F.UN SONG.wav" />
+    <None Include="Resources\KrustyKrab.jpg" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
