--- a/Simplified21(KuotM)/Simplified21(KuotM)/Simplified21(KuotM).csproj
+++ b/Simplified21(KuotM)/Simplified21(KuotM)/Simplified21(KuotM).csproj
@@ -88,5 +88,8 @@
   <ItemGroup>
     <None Include="Resources\blackjack%28Upscaled%291.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\BlackJack Table.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
